--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=lp2_t2_harodiazIrvind
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_i202334997
-spring.datasource.username=cibectec
+spring.datasource.username=root
 spring.datasource.password=05DanielFDHB@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.springframework.web=DEBUG
